# rust_learning

./: Cargo.toml  README.md
minigrep/src/: lib.rs  main.rs
promotion/: Cargo.toml
promotion/src/: lib.rs  main.rs  order.rs  promo.rs
quickreplace/src/: main.rs
restaurant/src/: lib.rs
rust_pl/: Cargo.toml
rust_pl/src/: lib.rs
rust_pl/src/box_pointer/: main.rs
rust_pl/src/circular_reference/: main.rs
rust_pl/src/collection_example/: main.rs
rust_pl/src/datastruct/: main.rs
rust_pl/src/deref_trait/: main.rs
rust_pl/src/drop_trait/: main.rs
rust_pl/src/enum_example/: main.rs
rust_pl/src/func_example/: main.rs
rust_pl/src/generics_example/: main.rs
rust_pl/src/inner_crate_example/: func.rs  main.rs
rust_pl/src/iron_gcd/: main.rs
rust_pl/src/iterator_and_closure/: main.rs
rust_pl/src/liftime_trait/: main.rs
rust_pl/src/panic_example/: main.rs
rust_pl/src/rc_pointer/: main.rs
rust_pl/src/refcell_pointer/: lib.rs  main.rs
rust_pl/src/reference/: counter.rs  main.rs
rust_pl/src/str_refererce_and_String/: main.rs
rust_pl/src/struct_example/: main.rs  mod.rs  point.rs  rectangle.rs
rust_pl/src/trait_example/: main.rs
rust_pl/src/utils/: counter.rs  fn_tools.rs  mod.rs  rectangle.rs
src/: lib.rs  main.rs
src/datastruct/: main.rs
src/enum_example/: main.rs
src/func_example/: main.rs  mod.rs
src/mandelbrot/: main.rs
src/ownership/: main.rs
src/reference/: counter.rs  mod.rs
src/str_refererce_and_String/: main.rs
src/struct_example/: main.rs  mod.rs  rectangle.rs
src/variable/: main.rs
test_example/: Cargo.toml
test_example/src/: lib.rs
test_example/src/inner_mod/: inner_test.rs  mod.rs
test_example/tests/: integration_test.rs
test_example/tests/common/: mod.rs
