[package]
name = "rust_pl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datastruct"
path = "./src/datastruct/main.rs"

[[bin]]
name = "variable"
path = "./src/variable/main.rs"

[[bin]]
name = "ownership"
path = "./src/ownership/main.rs"

[[bin]]
name = "str_reference_and_String"
path = "./src/str_refererce_and_String/main.rs"

[[bin]]
name = "func_example"
path = "./src/func_example/main.rs"

[[bin]]
name = "enum_example"
path = "./src/enum_example/main.rs"

[[bin]]
name = "iron_gcd"
path = "src/iron_gcd/main.rs"

[[bin]]
name = "mandelbrot"
path = "src/mandelbrot/main.rs"

[[bin]]
name = "reference"
path = "src/reference/main.rs"

[[bin]]
name = "struct_example"
path = "src/struct_example/main.rs"

[[bin]]
name = "inner_crate_example"
path = "src/inner_crate_example/main.rs"

[[bin]]
name = "collection_example"
path = "src/collection_example/main.rs"

[[bin]]
name = "panic_example"
path = "src/panic_example/main.rs"

[[bin]]
name = "generics_example"
path = "src/generics_example/main.rs"

[[bin]]
name = "trait_example"
path = "src/trait_example/main.rs"

[[bin]]
name = "liftime_trait"
path = "src/liftime_trait/main.rs"

[[bin]]
name = "iterator_and_closure"
path = "src/iterator_and_closure/main.rs"

[[bin]]
name = "box_pointer"
path = "src/box_pointer/main.rs"

[[bin]]
name = "deref_trait"
path = "src/deref_trait/main.rs"

[[bin]]
name = "drop_trait"
path = "src/drop_trait/main.rs"

[[bin]]
name = "rc_pointer"
path = "src/rc_pointer/main.rs"

[[bin]]
name = "refcell_pointer"
path = "src/refcell_pointer/main.rs"

[[bin]]
name = "circular_reference"
path = "src/circular_reference/main.rs"

[[bin]]
name = "weak_rc_pointer"
path = "src/weak_rc_pointer/main.rs"

[dependencies]
iron = "0.5.1"
mime = "0.2.3"
router = "0.5.1"
urlencoded = "0.5.0"
num = "0.1.27"
image = "0.13.0"
crossbeam = "0.2.8"